# graphir

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: ACCURACY.md  ARCHITECTURE.md  DEVPOST.md  VERIFICATION.md
scripts/: render_diagrams.py
src/graphir/: __init__.py  audit_report.py  batch_ingest.py  corrections.py  enrichment.py  evidence_chain.py  graph.py  hunts.py  ingest.py  investigation_log.py  investigative_report.py  known_good.py  navigator.py  provenance.py  reconstruct.py  report_render.py  server.py  sigma.py  temporal_integrity.py  verification.py
tests/: benchmark_trust_model.py  test_data.jsonl
